modificação de imagens

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -40,7 +40,7 @@
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/card-cortemasculino 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
                     <h3>Corte Masculino</h3>
@@ -48,143 +48,133 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/barba 1.png" alt="homem fazendo a barba">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Barba</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$30,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/corteinfantil 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Corte Infantil</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/unhas 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Manicure</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/sobrancelha 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Design de Sobrancelha</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/escova 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Escova</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/massagem 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Massagem</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/produto 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Produtos</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$50,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/hidratacao 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Hidratação</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
 
               <div class="servicos-card">
                 <div class="servico-img">
-                    <img src="./img/card-cortemasculino.png" alt="homem cortando cabelo">
+                    <img src="./img/cera 1.png" alt="homem cortando cabelo">
                 </div>
                 <div class="servico-info">
-                    <h3>Corte Masculino</h3>
+                    <h3>Depilação</h3>
                     <h4>By **********</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <p>R$25,00</p>
-                    <span class="icon-add"></span>
+                    <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
 
