trocada as cores do site

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -17,7 +16,7 @@
             <img src="./img/icon-logo.svg" alt="" class="logo">
             <nav class="menu-content">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#" class="active">Home</a></li>
                     <li><a href="./agendamentos.html">Agendamentos</a></li>
                     <li><a href="./sobrenos.html">Sobre nós</a></li>
                 </ul>
@@ -183,9 +182,12 @@
         </section>
 
         <section id="agendamento">
+            <div class="imagem-agendamentos">
+            <img src="./img/banner-agendamento.jpg" alt="imagem laranja  e azul">
+        </div>
             <div class="agendamento-content">
                 <h2>Faça seu Agendamento aqui!
-                    Escolha o melhor horário para você!
+                  <br>Escolha o melhor horário para você!
                 </h2>
                 <button class="btn-agendamentos"><a href="agendamentos.html">Agendar</a></button>
             </div>
