--- a/front-end/agendamentos.html
+++ b/front-end/agendamentos.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendamentos</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -16,7 +15,7 @@
         <nav class="menu-content">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="./agendamentos.html">Agendamentos</a></li>
+                <li><a href="./agendamentos.html" class="active">Agendamentos</a></li>
                 <li><a href="./sobrenos.html">Sobre nós</a></li>
             </ul>
         </nav>
