--- a/front-end/index.html
+++ b/front-end/index.html
@@ -19,24 +19,40 @@
                     <li><a href="#" class="active">Home</a></li>
                     <li><a href="./agendamentos.html">Agendamentos</a></li>
                     <li><a href="./sobrenos.html">Sobre nós</a></li>
+                    <li><button><a href="#">Cadastre-se</a></button></li>
                 </ul>
+
             </nav>
         </div>
     </header>
 
     <main>
 
-        <section id="banner">
-            <div class="banner-content">
-               <div class="banner-background"></div>
+        <section id="welcome-page">
+            <div class="welcome-content">
+            <div class="welcome-banner">
+              <div class="welcome-texts">
+               <img class="logo-senac" src="./img/icon-logosenac.svg" alt="">
+                <h2>Seja Muito Bem-Vindo<br>
+                  Agende agora um horário!</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi, nisi commodi hic ab, at est atque blanditiis quos id minima quia voluptate assumenda debitis incidunt? Similique esse nostrum temporibus?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga beatae molestias quidem cupiditate, vero nulla fugit. Laboriosam quaerat velit quasi consectetur excepturi officia voluptatem quidem sunt. Aspernatur commodi qui laborum?
+                  </p>
+                <div class="botoes">
+                    <button class="botao-login">Entrar</button>
+                    <button class="botao-servicos">Conheça nossos Serviços</button>
+                  </div>
             </div>
-        </section>
+              
+            <img class="img-desenho"src="./img/img-welcome.png" alt="desenho cortando cabelo">
+            </div>  
+        </div>
+          </section>
 
         <section id="servicos">
             <div class="servicos-content">
                 <h2>Nossos Serviços</h2>
                 <div class="servicos-card-content">
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/card-cortemasculino 1.png" alt="homem cortando cabelo">
@@ -50,7 +66,6 @@
                     <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/barba 1.png" alt="homem fazendo a barba">
