Tela de index e adição da tela do perfil

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -27,17 +27,17 @@
     </header>
 
     <main>
-
         <section id="welcome-page">
             <div class="welcome-content">
             <div class="welcome-banner">
               <div class="welcome-texts">
                <img class="logo-senac" src="./img/icon-logosenac.svg" alt="">
-                <h2>Seja Muito Bem-Vindo<br>
-                  Agende agora um horário!</h2>
+                <h2>Seja Muito Bem-Vindo!<br>
+                  Agende agora um horário.</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi, nisi commodi hic ab, at est atque blanditiis quos id minima quia voluptate assumenda debitis incidunt? Similique esse nostrum temporibus?
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga beatae molestias quidem cupiditate, vero nulla fugit. Laboriosam quaerat velit quasi consectetur excepturi officia voluptatem quidem sunt. Aspernatur commodi qui laborum?
-                  </p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga beatae molestias quidem cupiditate, vero nulla fugit. Laboriosam quaerat velit quasi consectetur excepturi officia voluptatem quidem sunt. Aspernatur commodi qui laborum?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum labore distinctio vero nihil corporis aspernatur accusantium maiores hic, cupiditate error totam sunt velit ea dolorem nisi consectetur obcaecati consequatur culpa.      
+            </p>
                 <div class="botoes">
                     <button class="botao-login">Entrar</button>
                     <button class="botao-servicos">Conheça nossos Serviços</button>
@@ -79,7 +79,6 @@
                     <button><a href="#">R$30,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/corteinfantil 1.png" alt="homem cortando cabelo">
@@ -93,7 +92,6 @@
                     <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/unhas 1.png" alt="homem cortando cabelo">
@@ -107,7 +105,6 @@
                     <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/sobrancelha 1.png" alt="homem cortando cabelo">
@@ -121,7 +118,6 @@
                     <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/escova 1.png" alt="homem cortando cabelo">
@@ -135,7 +131,6 @@
                     <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/massagem 1.png" alt="homem cortando cabelo">
@@ -149,7 +144,6 @@
                     <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/produto 1.png" alt="homem cortando cabelo">
@@ -163,7 +157,6 @@
                     <button><a href="#">R$50,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/hidratacao 1.png" alt="homem cortando cabelo">
@@ -177,7 +170,6 @@
                     <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
-
               <div class="servicos-card">
                 <div class="servico-img">
                     <img src="./img/cera 1.png" alt="homem cortando cabelo">
@@ -191,19 +183,16 @@
                     <button><a href="#">R$25,00</a></button>
                 </div>
               </div>
-
             </div>
             </div>
         </section>
 
         <section id="agendamento">
-            <div class="imagem-agendamentos">
-            <img src="./img/banner-agendamento.jpg" alt="imagem laranja  e azul">
-        </div>
-            <div class="agendamento-content">
+                        <div class="agendamento-content">
                 <h2>Faça seu Agendamento aqui!
                   <br>Escolha o melhor horário para você!
                 </h2>
+                <span class="linha"></span>
                 <button class="btn-agendamentos"><a href="agendamentos.html">Agendar</a></button>
             </div>
         </section>
