Finalizada a tela index

--- a/front-end/agendamentos.html
+++ b/front-end/agendamentos.html
@@ -51,6 +51,8 @@
         <div class="atendentes-lista">
           <div class="atendente-card">
             <img src="" alt="">
+            <span class="iconetds"></span>
+            <img src="" alt="">
             <p>Todos</p>
           </div>
           <div class="atendente-card">
@@ -71,7 +73,7 @@
           </div>
         </div>
   </div>
-  <div class="agendamento-tabela">
+   <div class="tabela-dia"> <!-- filtro -->
     <h2>Selecione uma data: </h2>
     <div class="escolha-dia">
      <span class="seta-esquerda"></span>
@@ -89,8 +91,8 @@
       </tr>
       <span class="seta-direita"></span>
     </div>
-    <div class="tabela">
-    <table>
+    <div class="tabela-horarios">
+    <table class="horarios">
             <tr class="cabecalho">
               <th>Horário</th>
               <th>Serviço</th>
@@ -100,9 +102,9 @@
             </tr>
             <tr>
               <td>08:00</td>
-              <td>Corte Masculino</td>
-              <td>Mario</td>
-              <td>Lorem ipsum dolor.</td>
+              <td></td>
+              <td></td>
+              <td></td>
               <td><div class="controles">
                 <span class="editar"><a href="#"></a></span>
                 <span class="mais-opcoes"><a href="#"></a></span>
@@ -133,6 +135,7 @@
     </div>
   </div>
 </div>
+</section>
 </main>
 
 <footer>
