--- a/front-end/index.html
+++ b/front-end/index.html
@@ -59,11 +59,9 @@
                 </div>
                 <div class="servico-info">
                     <h3>Corte Masculino</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$25,00</a></button>
+                    <span class="btn-preco"><a href="#">R$25,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -72,11 +70,9 @@
                 </div>
                 <div class="servico-info">
                     <h3>Barba</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$30,00</a></button>
+                    <span class="btn-preco"><a href="#">R$30,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -85,11 +81,9 @@
                 </div>
                 <div class="servico-info">
                     <h3>Corte Infantil</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$25,00</a></button>
+                    <span class="btn-preco"><a href="#">R$25,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -98,11 +92,9 @@
                 </div>
                 <div class="servico-info">
                     <h3>Manicure</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$25,00</a></button>
+                    <span class="btn-preco"><a href="#">R$25,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -111,11 +103,10 @@
                 </div>
                 <div class="servico-info">
                     <h3>Design de Sobrancelha</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$25,00</a></button>
+                    <span class="btn-preco"><a href="#">R$25,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -124,11 +115,10 @@
                 </div>
                 <div class="servico-info">
                     <h3>Escova</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$25,00</a></button>
+                    <span class="btn-preco"><a href="#">R$25,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -137,11 +127,10 @@
                 </div>
                 <div class="servico-info">
                     <h3>Massagem</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$25,00</a></button>
+                    <span class="btn-preco"><a href="#">R$25,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -150,11 +139,10 @@
                 </div>
                 <div class="servico-info">
                     <h3>Produtos</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$50,00</a></button>
+                    <span class="btn-preco"><a href="#">R$50,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -163,11 +151,10 @@
                 </div>
                 <div class="servico-info">
                     <h3>Hidratação</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$25,00</a></button>
+                    <span class="btn-preco"><a href="#">R$25,00</a></span>
                 </div>
               </div>
               <div class="servicos-card">
@@ -176,26 +163,17 @@
                 </div>
                 <div class="servico-info">
                     <h3>Depilação</h3>
-                    <h4>By **********</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
                 </div>
                 <div class="servico-preco-btn">
-                    <button><a href="#">R$25,00</a></button>
+                    <span class="btn-preco"><a href="#">R$25,00</a></span>
                 </div>
               </div>
             </div>
             </div>
         </section>
 
-        <section id="agendamento">
-                        <div class="agendamento-content">
-                <h2>Faça seu Agendamento aqui!
-                  <br>Escolha o melhor horário para você!
-                </h2>
-                <span class="linha"></span>
-                <button class="btn-agendamentos"><a href="agendamentos.html">Agendar</a></button>
-            </div>
-        </section>
+        
 
     </main>
 
